--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+27
+
+* Regenerate POT file (Jui Pradhan),
+* Add license (Jui Pradhan),
+* Port to python3 (Rahul Bothra),
+* Fix Attribute error (Rahul Bothra)
+
 26
 
 * polish graphics
